# adventofcode2021

./: Cargo.toml  aoc.js  package.json  setup.js
aoc/: Cargo.toml
aoc/src/: lib.rs
challenges/day00/: Cargo.toml
challenges/day00/benches/: benches.rs
challenges/day00/src/: lib.rs  main.rs
challenges/day01/: Cargo.toml  README.md
challenges/day01/benches/: benches.rs
challenges/day01/src/: lib.rs  main.rs
challenges/day02/: Cargo.toml  README.md
challenges/day02/benches/: benches.rs
challenges/day03/: Cargo.toml  README.md
challenges/day04/: Cargo.toml  README.md
challenges/day05/: Cargo.toml  README.md
challenges/day06/: Cargo.toml  README.md
challenges/day07/: Cargo.toml  README.md
challenges/day08/: Cargo.toml  README.md
challenges/day09/: Cargo.toml  README.md
challenges/day09/benches/: benches.rs
challenges/day09/src/: lib.rs  main.rs
challenges/day10/: Cargo.toml  README.md
challenges/day11/: Cargo.toml  README.md
challenges/day12/: Cargo.toml  README.md
challenges/day13/: Cargo.toml  README.md
challenges/day14/: Cargo.toml  README.md
challenges/day15/: Cargo.toml  README.md
challenges/day15/benches/: benches.rs
challenges/day15/src/: lib.rs  main.rs
challenges/day16/: Cargo.toml  README.md
challenges/day17/: Cargo.toml  README.md
challenges/day18/: Cargo.toml  README.md
challenges/day19/: Cargo.toml  README.md
challenges/day19/benches/: benches.rs
challenges/day19/src/: lib.rs  main.rs
challenges/day20/: Cargo.toml  README.md
challenges/day21/: Cargo.toml  README.md
challenges/day22/: Cargo.toml  README.md
challenges/day23/: Cargo.toml  README.md
challenges/day24/: Cargo.toml  README.md
challenges/day24/benches/: benches.rs
challenges/day24/src/: lib.rs  main.rs
day00/: Cargo.toml
parsers/: Cargo.toml
parsers/src/: ext.rs  lib.rs
(+59 files in other folders)
