[package]
name = "day09"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1"
parsers = { path = "../../parsers" }
aoc = { path = "../../aoc" }
iter_num_tools = "0.6"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false
